--- a/react-query-personal-project/package.json
+++ b/react-query-personal-project/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanstack/react-query": "^5.80.6",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -11,19 +12,18 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.6",
+    "axios": "^1.9.0",
+    "chalk": "^5.4.1",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "oracledb": "^6.8.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
-    "@tanstack/react-query": "^5.80.6",
-    "axios": "^1.9.0",
-    "express": "^5.1.0",
+    "react-scripts": "5.0.1",
     "request": "^2.88.2",
-    "oracledb": "^6.8.0",
-    "cors": "^2.8.5"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
